	PR debug/54970 	* cfgexpand.c (expand_debug_expr): Expand &MEM_REF[&var, n] 	as DEBUG_IMPLICIT_PTR + n if &var expands to DEBUG_IMPLICIT_PTR. 	* tree-sra.c (create_access_replacement): Allow also MEM_REFs 	with ADDR_EXPR first operand in DECL_DEBUG_EXPR expressions. 	* var-tracking.c (track_expr_p): Handle MEM_REFs in DECL_DEBUG_EXPR 	expressions. 	* dwarf2out.c (add_var_loc_to_decl): Likewise.

PR debug/54971
	* gcc.dg/guality/pr54970.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@192860 138bc75d-0d04-0410-961f-82ee72b054a4